kubernetes/traefik/dashboard-authentication-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-authentication
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-authentication
